标记不可靠文件下载
