# docs/swagger/swagger.yaml
@@ -165,6 +165,11 @@ paths:
         name: filename
         required: true
         type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/gin.Context'
       summary: 下载文件
       tags:
       - Test
@@ -176,12 +181,7 @@ paths:
         name: filename
         required: true
         type: string
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/gin.Context'
-      summary: 下载文件2
+      summary: 下载文件(不可靠)
       tags:
       - Test
   /api/v1/get:
